[package]
name = "dave_torrent"
version = "0.1.0"
authors = ["Dave Filion <dave.filion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lava_torrent = "0.5.0"
dns-lookup = "1.0.1"
bytebuffer = "0.2.1"
rand = "0.7.3"
byteorder = "1.3.4"